tests/ui/issues/issue-33571.rs
#[derive(Clone,
         Sync, //~ ERROR cannot find derive macro `Sync`
               //~| ERROR cannot find derive macro `Sync`
         Copy)]
enum Foo {}

fn main() {}
